syntax = "proto3";

option go_package = "echo/api";

option java_package = "ir.mag.grpc.echo";
option java_multiple_files = true;
option java_outer_classname = "EchoProto";
option objc_class_prefix = "ECH";

package echo;

service Echo {
  rpc GlobalCounter(CounterParam) returns (stream GlobalCounterResponse) {}
  //  rpc GlobalRadio(stream CalculatePrimeFactorsRequest) returns (stream CalculatePrimeFactorsResponse) {}
}

message CounterParam {}

message GlobalCounterResponse {
  int64 counter = 1;
}